fixed heading list alignment

--- a/style.styl
+++ b/style.styl
@@ -94,6 +94,7 @@ body
           line-height 125%
           padding 0
           list-style none
+          text-align left
           &.outliner-h1
             font-size 20px
           &.outliner-h2
